fixed styles of math expression when expression slot overflow

--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -18,6 +18,14 @@
   color: white;
 }
 
+.calculator__expression {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+}
+
 .calculator__controls {
   padding: 0;
   display: grid;
